ref #69 seta valores alterados no formulário do pagamento, após salvar no form.save()

--- a/escolar/escolas/templates/escolas/aluno_historico_list.html
+++ b/escolar/escolas/templates/escolas/aluno_historico_list.html
@@ -29,7 +29,7 @@
       <tbody>
       {% for historico in object_list %}
         <tr>
-          <td>{{ historico.data }}</td>
+          <td>{{ historico.data|date:"d/m/Y" }}</td>
           <td>{{ historico.usuario }}</td>
           <td>{{ historico.descricao }}</td>
         </tr>
