--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -102,12 +102,15 @@
             {% endif %}
         </td> -->
         <td>
-            {% if not pagamento.efet %}
+            {% if pagamento.can_pay %}
               <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#pagamento_{{ pagamento.id }}">Pagar</button>
             {% else %}
-              Pago: <span class="glyphicon glyphicon-ok-circle" style="color:green"></span><br>
-              <a href="{% url 'print_recibo' pagamento.id %}">Recibo</a>
+              {% if pagamento.efet %}
+                Pago: <span class="glyphicon glyphicon-ok-circle" style="color:green"></span><br>
+                <a href="{% url 'print_recibo' pagamento.id %}">Recibo</a>
+              {% endif %}
             {% endif %}
+        {% if pagamento.can_pay %}
         </td>
             <!-- Modal -->
             <div class="modal fade" id="pagamento_{{ pagamento.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -138,6 +141,7 @@
                 </div>
               </div>
             </div>
+          {% endif %}
       </tr>
     {% empty %}
     <tr>
