ref #72 coloca um check no que já foi feito e está disponível; coloca também um 'slogam'

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -10,11 +10,43 @@
     </div>
     {% else %}
     <div class="container">
+      <h2 align=”right”>A Escola 4.0 começa na gestão da instituição </h2>
     <div class="jumbotron">
       <div class="container">
-        <h3></h3>
-        <p></p>
-        <p></p>
+        <div class="col-md-4">
+          <h5>Gestão dos Dados</h5>
+            <ul>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Cadastro de Alunos </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Cadastro de Responsáveis </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Cadastro de Autorizados </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Ficha do Aluno </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Relatório de aniversariantes </li>
+              <li> Histórico auditável </li>
+            </ul>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
+        </div>
+        <div class="col-md-4">
+          <h5>Gestão de Contratos</h5>
+            <ul>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Contratos de prestação de serviços educacionais  </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Contratos de pessoal  </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Cálculo de juros e multas </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Cálculo de descontos </li>
+              <li> Histórico auditável </li>
+            </ul>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
+        </div>
+        <div class="col-md-4">
+          <h5>Gestão de Pagamentos</h5>
+            <ul>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Contas a receber  </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Contas a pagar  </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Envio de recibos por email </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Impressão e download dos recibos </li>
+              <li> <span class="glyphicon glyphicon-ok-circle" style="color:green"></span> Histórico auditável </li>
+            </ul>
+         <!--  <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
+        </div>
       </div>
     </div>
 
@@ -29,7 +61,7 @@
               <li>Datas dos compromissos financeiros dos Responsáveis dos alunos</li>
               <li>Envios de alertas para os responsáveis</li>
             </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
         </div>
 
         <div class="col-md-4">
@@ -40,7 +72,7 @@
               <li>Mensagem simultânea para todos responsáveis de alunos</li>
               <li>Mensagem para grupos de responsáveis por alunos</li>
             </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
         </div>
 
         <div class="col-md-4">
@@ -48,18 +80,17 @@
           <p>Acesso aos dados de onde você estiver</p>
           <ul>
               <li>Exercícios</li>
-              <li>Cadastro de alunos</li>
               <li>Notas</li>
               <li>Faltas</li>
               <li>Atividades</li>
             </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Detalhes &raquo;</a></p> -->
         </div>
       <hr>
 
-      <footer>
+<!--       <footer>
         <p>&copy; 2017 Company, Inc.</p>
-      </footer>
+      </footer> -->
     </div> 
     {% endif %}
 {% endblock content %}
