ref #73 filtro por + e - na listagem de pagamentos gerais

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -32,6 +32,7 @@
         {% bootstrap_field form.categoria %}
         {% bootstrap_field form.titulo %}
         {% bootstrap_field form.efet %}
+        {% bootstrap_field form.tipo  %}
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
