--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -174,6 +174,8 @@
     </tbody>
   </table>
   {% include 'pagination.html' %}
+    <!-- th><div id="piechart" style="width: 810px; height: 450px;"></div></th> -->
+  <th><div id="piechart_3d" style="width: 810px; height: 450px;"></div></th>
 </div>
 
 {% endblock content %}
