--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -68,11 +68,11 @@
             <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.matricula_nr %}</p>
               <p>{% bootstrap_field form.matricula_valor %}</p>
-              <small>Apostilas</small>
-              <p>{% bootstrap_field form.material_valor %}</p>
-              <p>{% bootstrap_field form.material_parcelas %}</p>
               <p>{% bootstrap_field form.data_assinatura %}</p>
               <p>{% bootstrap_field form.arquivo %}</p>
+              <small>Apostilas</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Se preencher 1 campo o outro será requerido"></i></a>
+              <p>{% bootstrap_field form.material_valor %}</p>
+              <p>{% bootstrap_field form.material_parcelas %}</p>
             </div>
           </div>
         </div>
