ref #73 Contrato: limitar a 12 meses, colocar choice default 12; help; cria as parcelas descontando a diferença para 12 meses; permite gerar as parcelas enquanto não tiver nenhuma paga

--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -69,6 +69,7 @@
               <p>{% bootstrap_field form.multa %}</p>
               <p>{% bootstrap_field form.juros %}</p>
               <p>{% bootstrap_field form.condicao_juros %}</p>
+              <small>Parcelas</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="12 = de janeiro a dezembro; &#10 11 = de fevereiro a dezembro; &#10 10 = de março a dezembro; &#10 9 = de  abril a dezembro; &#10 8 = de maio a dezembro; &#10 7 = de junho a dezembro; &#10 ..."></i></a>
               <p>{% bootstrap_field form.nr_parcela %}</p>
             </div>
             <div class="col-xs-9 col-sm-6 col-md-3">
