--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -29,6 +29,7 @@
               {% bootstrap_field form.nome %}
               {% bootstrap_field form.email %}
               {% bootstrap_field form.celular %}
+              {% bootstrap_field form.telefone %}
               {% bootstrap_field form.documento %}
             </div>
           </div>
