ref #73 CPF e não documento

--- a/escolar/escolas/templates/escolas/autorizado_cadastro.html
+++ b/escolar/escolas/templates/escolas/autorizado_cadastro.html
@@ -26,7 +26,7 @@
           <p><b>email</b>: {{ autorizado.email|default:'' }}</p>
           <p><b>cel.</b>: {{ autorizado.celular|default:'' }}</p>
           <p><b>tel.</b>: {{ autorizado.telefone|default:'' }}</p>
-          <p><b>documento</b>: {{ autorizado.documento }}</p>
+          <p><b>CPF:</b>: {{ autorizado.documento }}</p>
         </div>
       </div>
   </div>
