ref #73 corrige bug de tentar idt o curso do aluno e não tiver um contrato no ano corrente

--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -49,7 +49,7 @@
               <p>{% bootstrap_field form.serie %}</p>
               <p><b>Aluno</b>:{{ aluno.nome }}</p>
               <p>{% bootstrap_field form.responsavel %}</p>
-              <small>Valor total do contrato</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Valor total do contrato (anuidade, semestralidade) + &#10 o valor da matrícula. &#10 Eventuais descontos devem ser colocados em &#10 Bolsa (%) ou &#10 no Desconto  por pontualidade (%)"></i></a>
+              <small>Valor total do contrato</small> <a href=""><i class="glyphicon glyphicon-question-sign" title="Valor total do contrato (anuidade, semestralidade) + &#10 o valor da matrícula. &#10 &#10  Eventuais descontos devem ser colocados em &#10 Bolsa (%) ou &#10 no Desconto  por pontualidade (%)"></i></a>
               <p>{% bootstrap_field form.valor %}</p>
             </div>
             <div class="col-xs-9 col-sm-6 col-md-3">
